--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ ga_analytics: # Add your GA Tracking Id
 rss_enabled: true # Change to false if not
 social:
   dribbble: # Add your Dribbble link
-  facebook: # Add your Facebook link
-  github: # Add your GitHub link
-  linkedin: # Add your LinkedIn link
+  facebook: #
+  github: https://github.com/jfkingiii
+  linkedin: http://www.linkedin.com/profile/view?id=20616260&trk=nav_responsive_tab_profile
   twitter: # Add your Twitter handle
-  email: # Add your Email address
+  email: xxxx@gmail.com
   bitcoin: # Add your Bitcoin link or address
 
 # Important settings (change at own risk)
